recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: ';' expected but '(' found.
var tableau:Array[Int] (l.length-1)
                       ^